--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">FirstProj</string>
+    <string name="shopping_cart_content_desc">qweqeq</string>
 </resources>
